# justact-prototype-rs

./: .gitmodules  Cargo.toml  README.md  benchmark.py
examples/: paper1.rs
examples/dex/: README.md  read_data.rs
examples/dex/agents/: driver.rs  mod.rs
examples/invalid/: invalid_action.rs  invalid_gossip.rs
examples/paper/: administrator.rs  amy.rs  anton.rs  consortium.rs  mod.rs
examples/section5/: README.md  error.rs  section5.4.1.rs  section5.4.2.rs  section5.4.3.rs  section5.4.4.rs  section5.4.5.rs  section6.3.1.rs  section6.3.2.rs  section6.3.3.rs  section6.3.4.rs  section6.3.5.rs  trace.rs
examples/section5/agents/: amdex.rs  amy.rs  bob.rs  consortium.rs  dan.rs  mod.rs  st_antonius.rs  surf.rs
examples/section5/slick/: agreement.slick  amdex_1.slick  amy_1.slick  bob_1.slick  consortium_1.slick  consortium_2.slick  st-antonius_1.slick  st-antonius_5.slick  st-antonius_6.slick  st-antonius_7.slick  surf_1.slick  surf_2.slick  surf_3.slick
examples/section6/: README.md  helpers.rs  section6.3.1.rs  section6.3.2.rs  section6.3.3_crash.rs  section6.3.3_ok.rs  section6.3.4.rs  section6.3.5.rs  trace.rs
examples/section6/agents/: amy.rs  bob.rs  consortium.rs  dan.rs  mod.rs  st_antonius.rs  surf.rs
examples/section6/slick/: amy_1.slick  amy_2.slick  bob_1.slick  consortium_1.slick  consortium_2.slick  dan_1.slick  st-antonius_1.slick  st-antonius_2.slick  st-antonius_3.slick  st-antonius_4.slick  st-antonius_5.slick  st-antonius_6.slick  surf_1.slick  surf_2.slick  surf_4.slick
src/: agent.rs  agreements.rs  auditing.rs  codegen.rs  dataplane.rs  events.rs  interface.rs  io.rs  lib.rs  runtime.rs  sets.rs  simulation.rs  statements.rs  times.rs  wire.rs
src/policy/: datalog.rs  mod.rs  slick.rs
