[package]

name = "justact-prototype"
version = "1.0.0"
edition = "2021"
authors = ["Tim Müller"]
repository.workspace = true
license.workspace = true
description = "Provides an implementation of a simple demo environment that simulates agents without threads or any of that fancy jazz."


[[example]]
name = "section6-3-1"
path = "examples/section6/section6.3.1.rs"
required-features = ["dataplane", "log", "serde", "slick"]

[[example]]
name = "section6-3-2"
path = "examples/section6/section6.3.2.rs"
required-features = ["dataplane", "log", "serde", "slick"]

[[example]]
name = "section6-3-3-ok"
path = "examples/section6/section6.3.3_ok.rs"
required-features = ["dataplane", "log", "serde", "slick"]
[[example]]
name = "section6-3-3-crash"
path = "examples/section6/section6.3.3_crash.rs"
required-features = ["dataplane", "log", "serde", "slick"]

[[example]]
name = "section6-3-4"
path = "examples/section6/section6.3.4.rs"
required-features = ["dataplane", "log", "serde", "slick"]

[[example]]
name = "section6-3-5"
path = "examples/section6/section6.3.5.rs"
required-features = ["dataplane", "log", "serde", "slick"]

[[example]]
name = "invalid-action"
path = "examples/invalid/invalid_action.rs"
required-features = ["log", "serde", "slick"]

[[example]]
name = "invalid-gossip"
path = "examples/invalid/invalid_gossip.rs"
required-features = ["log", "serde", "slick"]

# [[example]]
# name = "dex-read-data"
# path = "examples/dex/read_data.rs"
# required-features = ["dataplane", "log", "serde", "slick"]


[dependencies]
error-trace = "4.0.0"
log = { version = "0.4.0", optional = true }
nom = { version = "7.1.0", optional = true }
serde = { version = "1.0.0", features = ["derive", "rc"], optional = true }
thiserror = "2.0.0"

datalog = { git = "https://github.com/Lut99/datalog-rs", rev = "260ec954b0ae218cb452ba5f043f18910ae57f6c", features = ["interpreter", "parser"], optional = true }

justact = { path = "./lib/justact", features = ["serde"] }
slick = { path = "./lib/slick", optional = true }


[dev-dependencies]
clap = { version = "4.5.0", features = ["derive"] }
humanlog = { git = "https://github.com/Lut99/humanlog-rs", tag = "v0.2.0" }
serde_json = "1.0.0"


[features]
default = []

all-lang = ["datalog", "slick"]
datalog = ["dep:datalog"]
slick = ["dep:nom", "dep:slick"]

dataplane = []

lang-macros = ["datalog/macros"]

log = ["dep:log"]
serde = ["dep:serde"]



[workspace]
resolver = "2"
members = [
    "bin/inspector"
]

[workspace.package]
repository = "https://github.com/Lut99/justact-prototype-rs"
license = "Apache-2.0"
